projects/mamba/tests/cpython/fixtures/type-strict/param_types/errors/statistics_mean_rejects_int_argument.py
# /// script
# requires-python = ">=3.12"
# dependencies = []
#
# [tool.mamba]
# bucket = "type-strict"
# lib = "param_types"
# dimension = "errors"
# case = "statistics_mean_rejects_int_argument"
# subject = "statistics.mean"
# kind = "mechanical"
# xfail = ""
# mem_carveout = ""
# source = ""
# status = "filled"
# ///
# mamba-strict-type: TypeError
"""statistics.mean: statistics_mean_rejects_int_argument (errors)."""
import statistics

try:
    result = statistics.mean(1)
    print("no_typeerror:", repr(result))
except TypeError as e:
    print("typeerror:", type(e).__name__, str(e)[:80])
